build/log/idf_py_stdout_output_18482
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/nikola/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/build/config -I/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/main -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_libc/platform_include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/freertos/config/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/freertos/config/include/freertos -I/home/nikola/.espressif/v6.0.1/esp-idf/components/freertos/config/xtensa/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/nikola/.espressif/v6.0.1/esp-idf/components/freertos/esp_additions/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/include/soc -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/etm/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/modem/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/. -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/heap/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/heap/tlsf -I/home/nikola/.espressif/v6.0.1/esp-idf/components/log/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/soc/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/soc/esp32 -I/home/nikola/.espressif/v6.0.1/esp-idf/components/soc/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/soc/esp32/register -I/home/nikola/.espressif/v6.0.1/esp-idf/components/hal/platform_port/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/hal/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/hal/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_rom/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_rom/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_rom/esp32 -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_common/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_system/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_system/port/soc -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_system/port/include/private -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_stdio/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/xtensa/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/xtensa/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/xtensa/deprecated_include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_gpio/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_gpio/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_usb/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_pmu/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_pmu/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_dma/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_i2s/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_i2s/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/include/apps -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/lwip/src/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/port/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/port/freertos/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/port/esp32xx/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/nikola/.espressif/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/components/I2C/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_driver_i2c/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_i2c/esp32/include -I/home/nikola/.espressif/v6.0.1/esp-idf/components/esp_hal_i2c/include -I/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/components/LCD/include -I/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/components/Accel/include @"/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles=. -fmacro-prefix-map=/home/nikola/.espressif/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/main/main.c
/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/main/main.c: In function 'app_main':
/home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/main/main.c:55:17: error: implicit declaration of function 'ESP_LOGW'; did you mean 'ESP_OK'? [-Wimplicit-function-declaration]
   55 |                 ESP_LOGW(TAG, "Can not compute atan2f because all accelerometer values are zero.");
      |                 ^~~~~~~~
      |                 ESP_OK
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/build/bootloader && /home/nikola/.espressif/tools/python/v6.0.1/venv/bin/python /home/nikola/.espressif/v6.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/nikola/Desktop/Files/Projects/ESP/Accelerometer-Angles/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
